<resources>
    <string name="app_name">MypocketHealth</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">image</string>
    <string name="join_as_client">Join as user</string>
    <string name="join_as_provider">Join as provider</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number_medical_number">Phone number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">Or</string>
    <string name="google">Google</string>
    <string name="facebook">facebook</string>
    <string name="user">User</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="medical_number">Medical Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="my_text">I accept the MypocketHealth <u><b> Terms of use &amp; Privacy Policy</b></u>.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="verification">Verification</string>
    <string name="please_enter_the_4_digit_code">Please enter the 4-digit code</string>
    <string name="send_to_you_at_1_453656776">send to you at +1 453656776</string>
    <string name="submit">Submit</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_information">A verification code has been sent to your Phone Number
        +91456444456. Please enter the code below</string>
    <string name="verification_code">Enter Your Verification Code</string>
    <string name="congratulations">Congratulations</string>
    <string name="your_profile_is_successfully">Your profile is Successfully registered</string>
    <string name="verified">verified</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="done">Done</string>
    <string name="select_options_for_service_period">Select options for service period</string>
    <string name="start_date">Start Date :</string>
    <string name="end_date">End Date :</string>
    <string name="futureText1">Start date / end date</string>
    <string name="futureText2">should not be future dates.</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="start_date_should_be">Start date should be</string>
    <string name="less_than_end_date">less than end date.</string>
    <string name="good_morning">Good Morning</string>
    <string name="anil_developer">my pocket health</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="reminders">Reminders</string>
    <string name="settings">Settings</string>
    <string name="what_do">What do</string>
    <string name="you">you</string>
    <string name="needs">need</string>
    <string name="symptom_checker">Symptom checker</string>
    <string name="the_latest_covid_19">The latest COVID-19</string>
    <string name="information_and">information and</string>
    <string name="tips">tips</string>
    <string name="covid_19_vaccines">COVID-19 vaccines</string>
    <string name="get_the_latest_information_and_advice">get the latest information and advice</string>
    <string name="discover">Discover</string>
    <string name="introduction">introduction</string>
    <string name="who_is_the_checkup_for">Who is the checkup for?</string>
    <string name="myself">Myself</string>
    <string name="someone_else">Someone else</string>
    <string name="patient">Patient</string>
    <string name="what_is_your_sex">What is your sex?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">others</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="_25">2</string>
    <string name="_24">1</string>
    <string name="_26">3</string>
    <string name="next">Next</string>
    <string name="please_check_all_the_statements">Please check all the statements</string>
    <string name="below_that_apply_to_you">below that apply to you.</string>
    <string name="select_one_answer_in_each_row">Select one answer in each row.</string>
    <string name="i_m_overweight_or_obese">I\'m overweight or obese</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="don_t_know">Don\'t know</string>
    <string name="i_smoke_cigarettes">I smoke cigarettes</string>
    <string name="i_ve_recently_suffered_an_injury">I\'ve recently suffered an injury</string>
    <string name="i_have_high_cholesterol">I have high cholesterol</string>
    <string name="i_have_hypertension">I have hypertension</string>
    <string name="add_symptoms">Add symptoms</string>
    <string name="please_use_the_search_or_click_on_the_body">Please use the search or click on the body.</string>
    <string name="add_as_many_symptoms_as_you_can_for">Add as many symptoms as you can for</string>
    <string name="the_most_accurate_results">the most accurate results.</string>
    <string name="regions">Regions</string>
    <string name="please_select_the_region_you_live_in_and">Please select the region you live in and</string>
    <string name="places_you_ve_traveled_to_the_last_12">places you\'ve traveled to the last 12</string>
    <string name="months">months</string>
    <string name="interview">Interview</string>
    <string name="do_you_have_any_of_the_following">Do you have any of the following</string>
    <string name="symptoms">symptoms?</string>
    <string name="cold_hands_or_fingers">Cold hands or fingers</string>
    <string name="cold_feet_and_toes">Cold feet and toes</string>
    <string name="pale_skin_only_fingers">Pale skin,only fingers</string>
    <string name="symptoms_worse_in_the_cold">Symptoms worse in the cold</string>
    <string name="pale_skin">Pale skin</string>
    <string name="hair_loss">Hair loss</string>
    <string name="what_is_your_blood_pressure_please">What is your blood pressure? Please</string>
    <string name="select_the_highest_value_measured">select the highest value measured.</string>
    <string name="please_note_that_the_first_number_is">Please note that the first number is</string>
    <string name="systolic_pressure_and_the_second">systolic pressure and the second</string>
    <string name="number_is_diastolic_pressure">number is diastolic pressure.</string>
    <string name="systolic_more_than_140_or_diastolic_more_than_90">Systolic more than 140 or diastolic more than 90</string>
    <string name="systolic_90_or_more_or_diastolic_60_or_more">Systolic 90 or more, or diastolic 60 or more</string>
    <string name="systolic_less_than_90_or_40_less_than_usual_or_diastolic_less_than_60">Systolic less than 90, or 40 less than usual or diastolic less than 60</string>
    <string name="it_wasn_t_measured">It wasn\'t measured</string>
    <string name="i_do_not_understand_this_question">I do not understand this question</string>
    <string name="do_you_feel_lightheaded">Do you feel lightheaded?</string>
    <string name="are_your_toes_and_feet_cold">Are your toes and feet cold?</string>
    <string name="how_strong_is_your_headache">How strong is your headache?</string>
    <string name="results">Results</string>
    <string name="recommendation">Recommendation</string>
    <string name="consult_a_doctor">Consult a doctor</string>
    <string name="your_symptoms_may_require_medical">Your symptoms may require medical</string>
    <string name="evaluation_schedule_an_appointment">evaluation schedule an appointment</string>
    <string name="with_your_doctor_if_your_symptoms_get">with your doctor. If your symptoms get</string>
    <string name="worse_see_a_doctor_immediately">worse, see a doctor immediately</string>
    <string name="recommended_specialist">Recommended specialist</string>
    <string name="neurologist">Neurologist</string>
    <string name="suggested_consultation_from">Suggested consultation from</string>
    <string name="telephone_consultation">Telephone consultation</string>
    <string name="result">Result</string>
    <string name="please_note_that_list_below_may_not">Please note that list below may not</string>
    <string name="for_information_purposes_and_is_not_a">for information purposes and is not a</string>
    <string name="qualified_medical_opinion">qualified medical opinion.</string>
    <string name="migraine">Migraine</string>
    <string name="moderate_evidence">Moderate evidence</string>
    <string name="hypotension">Hypotension</string>
    <string name="lab_tests">Lab tests</string>
    <string name="preventive">Preventive</string>
    <string name="the_lab_test_below_are_related_to_your">The lab test below are related to your</string>
    <string name="symptoms_however_they_are">symptoms, however they are...</string>
    <string name="morphology_and_urinalysis">Morphology and urinalysis</string>
    <string name="glucose">Glucose</string>
    <string name="lipid_profile">Lipid profile</string>
    <string name="summary">Summary</string>
    <string name="your_answers_show">Your answers............... show</string>
    <string name="considered_diagnoses_690">Considered diagnoses............... 690+</string>
    <string name="duration_of_the_interview_4_min_20_s">Duration of the interview............... 4 min 20 s</string>
    <string name="start_over">Start Over</string>
    <string name="feedback">Feedback</string>
    <string name="how_would_you_the_usefulness_of_this">How would you rate the usefulness of this</string>
    <string name="services">Services</string>
    <string name="_1_3">1/3</string>
    <string name="are_you_sleeping_well">Are you sleeping well?</string>
    <string name="your_comment_optional">Your comment (Optional)</string>
    <string name="send_feedback">Send feedback</string>
    <string name="please_not_that_the_list_may_not">Please not that the list may not</string>
    <string name="be_complete_and_is_provided_solely">be complete and is provided solely</string>
    <string name="subscription">Subscription</string>
    <string name="skip">Skip</string>
    <string name="Continue">CONTINUE</string>
    <string name="plan">PLAN</string>
    <string name="platinum">Platinum</string>
    <string name="internetOff">NO</string>
    <string name="connection">Internet Connection</string>
    <string name="dr_john_phillp">Dr. John Phillp</string>
    <string name="ms_obg_fellowship_in">Ms (OBG),fellowship in</string>
    <string name="name_field">your name</string>
    <string name="your_age">your age</string>
    <string name="ok">OK</string>
    <string name="are_you_sure_you_want_to_sign_out">Are You Sure You Want</string>
    <string name="to_sign_out">To Sign Out</string>
    <string name="_00_00">00:00</string>
    <string name="timing_should_be_between">Timings should be between</string>
    <string name="_1_to_12">1 AM to 12 PM</string>
    <string name="name">Name</string>
    <string name="proof_if_registration">Proof of registration</string>
    <string name="letter_of_good_standing">Letter of good standing</string>
    <string name="curriculum_vitae">Curriculum vitae</string>
    <string name="specialist_field">specialist</string>
    <string name="your_appointment_has_been_scheduled">Your booking request has been</string>
    <string name="send_to_dr_rajat">sent to Dr. rajat.</string>
    <string name="dr_rajat_will_response_on_it_soon">Dr.rajat will response on it soon</string>
    <string name="request_status">request status</string>
    <string name="awaiting_verification">Awaiting verification</string>
    <string name="your_profile_is_in_the_process">Your profile is in the process</string>
    <string name="of_being_verified">of being verified</string>
</resources>