<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_box"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/done"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/documents" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/proof_if_registration"
        android:textColor="@color/cardview_dark_background"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/or"
        android:textColor="@color/cardview_dark_background"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat"
        android:text="@string/letter_of_good_standing"
        android:textColor="@color/cardview_dark_background"
        android:textSize="16sp"
        android:textStyle="bold" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/or"
        android:textColor="@color/cardview_dark_background"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat"
        android:text="@string/curriculum_vitae"
        android:textColor="@color/cardview_dark_background"
        android:textSize="16sp"
        android:textStyle="bold" />




    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/outer_button_layout"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>