<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_box"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/done"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/timing" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
      android:fontFamily="@font/montserrat"
        android:text="@string/timing_should_be_between"
        android:textColor="@color/cardview_dark_background"
        android:textSize="16sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
      android:fontFamily="@font/montserrat"
        android:text="@string/_1_to_12"
        android:textColor="@color/cardview_dark_background"
        android:textSize="16sp" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@drawable/outer_button_layout"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </RelativeLayout>
</LinearLayout>