<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_layout">


    <LinearLayout
        android:id="@+id/detail_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/doctor_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:contentDescription="@string/done"
            android:src="@drawable/profile"
            app:civ_border_color="@color/grey"
            app:civ_border_width="1dp" />

        <LinearLayout
            android:id="@+id/box_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/doctor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:singleLine="true"
                android:text="@string/dr_john_phillp"
                android:textColor="@color/cardview_dark_background"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/speciality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/montserrat"
                android:singleLine="true"
                android:text="@string/ms_obg_fellowship_in"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:singleLine="true"
                android:text="@string/specialist_field"
                android:textSize="12sp" />


        </LinearLayout>


    </LinearLayout>



    <LinearLayout
        android:id="@+id/congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_box"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:text="@string/your_appointment_has_been_scheduled"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/send_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:text="@string/send_to_dr_rajat"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:text="@string/dr_rajat_will_response_on_it_soon"
            android:textSize="17sp" />


    </LinearLayout>



    <LinearLayout
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/congrats"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/request_status"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/gray_three"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/booking_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:text="@string/_00_00"
            android:textColor="@color/green_one"
            android:textStyle="bold" />


    </LinearLayout>






    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/outer_button_layout"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </RelativeLayout>




</RelativeLayout>