<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:background="@drawable/internet_status_style"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/done"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/internet_off2" />

    <TextView
        android:id="@+id/next"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/internetOff"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:layout_centerHorizontal="true"
        android:layout_below="@id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20sp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/connection"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>