<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_box"
    android:orientation="vertical">


    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:gravity="center"
        android:fontFamily="@font/montserrat"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/name_field"
        />


    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:fontFamily="@font/montserrat"
        android:inputType="number"
        android:maxLength="2"
        android:hint="@string/your_age"
        android:ems="10"
         />

    <RelativeLayout
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">


        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:background="@drawable/outer_button_layout"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </RelativeLayout>
</LinearLayout>